--- a/app/config/ClientConfig.yaml
+++ b/app/config/ClientConfig.yaml
@@ -4,4 +4,4 @@ login:
   password: '123456'
   username: szx
 user:
-  token: '"eyJhbGciOiJIUzI1NiJ9.eyJleHAiOjE3MDY1Mzg1NjYsInVzZXJJZCI6M30.NwlLQFojA5vF7xf92W4Yx8kevGCMoGPka2s6i2uqOrY"'
+  token: eyJhbGciOiJIUzI1NiJ9.eyJleHAiOjE3MDY3MTk2NDQsInVzZXJJZCI6MH0.LA21ovfCAgf84fBeQjqqzHz38dINVpbNutv4S4TdOOQ
